--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,9 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+/* Estilo para el subrayado */
+.annotation {
+    position:absolute;
+    right: -100px;
+    top: 0;
+}
